--- a/content/resources/mit6_050js08_ps_02.md
+++ b/content/resources/mit6_050js08_ps_02.md
@@ -1,8 +1,12 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-050j-information-and-entropy-spring-2008/75e936d9bacb0fb5b97a9355dcaca045_MIT6_050JS08_ps_02.pdf
+file: /media/courses/6-050j-information-and-entropy-spring-2008/75e936d9bacb0fb5b97a9355dcaca045_MIT6_050JS08_ps_02.pdf
 file_type: application/pdf
+learning_resource_types: []
+ocw_type: OCWFile
+parent_title: 'Unit 3: Compression'
+parent_type: CourseSection
 resourcetype: Document
 title: Problem Set 2
 uid: 75e936d9-bacb-0fb5-b97a-9355dcaca045
