--- a/content/resources/mit6_050js08_ps_08.md
+++ b/content/resources/mit6_050js08_ps_08.md
@@ -1,8 +1,12 @@
 ---
 content_type: resource
 description: A problem set on information and entropy.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-050j-information-and-entropy-spring-2008/6f88ccb6ef92e1e1253cbd0f8151e579_MIT6_050JS08_ps_08.pdf
+file: /media/courses/6-050j-information-and-entropy-spring-2008/6f88ccb6ef92e1e1253cbd0f8151e579_MIT6_050JS08_ps_08.pdf
 file_type: application/pdf
+learning_resource_types: []
+ocw_type: OCWFile
+parent_title: 'Unit 9: Maximum Entropy'
+parent_type: CourseSection
 resourcetype: Document
 title: Problem Set 8
 uid: 6f88ccb6-ef92-e1e1-253c-bd0f8151e579
