--- a/content/resources/mit6_050js08_ps_09.md
+++ b/content/resources/mit6_050js08_ps_09.md
@@ -1,8 +1,12 @@
 ---
 content_type: resource
 description: A problem set on information and entropy.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-050j-information-and-entropy-spring-2008/07daed4e50b732eb0b3d46cad77543b3_MIT6_050JS08_ps_09.pdf
+file: /media/courses/6-050j-information-and-entropy-spring-2008/07daed4e50b732eb0b3d46cad77543b3_MIT6_050JS08_ps_09.pdf
 file_type: application/pdf
+learning_resource_types: []
+ocw_type: OCWFile
+parent_title: 'Unit 10: Physical Systems'
+parent_type: CourseSection
 resourcetype: Document
 title: Problem Set 9
 uid: 07daed4e-50b7-32eb-0b3d-46cad77543b3
