--- a/content/resources/mit6_050js08_ps_10.md
+++ b/content/resources/mit6_050js08_ps_10.md
@@ -1,8 +1,12 @@
 ---
 content_type: resource
 description: A problem set on information and entropy.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-050j-information-and-entropy-spring-2008/ab8f6f9d40075fbf862e863d5582807b_MIT6_050JS08_ps_10.pdf
+file: /media/courses/6-050j-information-and-entropy-spring-2008/ab8f6f9d40075fbf862e863d5582807b_MIT6_050JS08_ps_10.pdf
 file_type: application/pdf
+learning_resource_types: []
+ocw_type: OCWFile
+parent_title: 'Unit 11: Energy'
+parent_type: CourseSection
 resourcetype: Document
 title: Problem Set 10
 uid: ab8f6f9d-4007-5fbf-862e-863d5582807b
