Sync all content

--- a/content/resources/mit6_050js08_ps_02.md
+++ b/content/resources/mit6_050js08_ps_02.md
@@ -7,6 +7,7 @@ learning_resource_types: []
 ocw_type: OCWFile
 parent_title: 'Unit 3: Compression'
 parent_type: CourseSection
+parent_uid: 2dcc8474-126c-fe52-468d-88a8358a4a30
 resourcetype: Document
 title: Problem Set 2
 uid: 75e936d9-bacb-0fb5-b97a-9355dcaca045
