--- a/content/resources/mit6_050js08_ps_03.md
+++ b/content/resources/mit6_050js08_ps_03.md
@@ -7,6 +7,7 @@ learning_resource_types: []
 ocw_type: OCWFile
 parent_title: 'Unit 4: Noise and Errors'
 parent_type: CourseSection
+parent_uid: e540be48-60de-de3e-a806-e164de6627ab
 resourcetype: Document
 title: Problem Set 3
 uid: 417902c7-efc1-b751-07c5-8381af7ea9b3
