--- a/content/resources/mit6_050js08_ps_04.md
+++ b/content/resources/mit6_050js08_ps_04.md
@@ -7,6 +7,7 @@ learning_resource_types: []
 ocw_type: OCWFile
 parent_title: 'Unit 5: Probability'
 parent_type: CourseSection
+parent_uid: 4a7c8a7a-031e-7d86-e440-022fce4128e3
 resourcetype: Document
 title: Problem Set 4
 uid: 2f6e880c-24f1-b40e-3a14-cdb2f845dd9b
