--- a/content/resources/mit6_050js08_ps_05.md
+++ b/content/resources/mit6_050js08_ps_05.md
@@ -7,6 +7,7 @@ learning_resource_types: []
 ocw_type: OCWFile
 parent_title: 'Unit 6: Communications'
 parent_type: CourseSection
+parent_uid: 41d41aad-b959-8d1c-a97c-e913433a3a5c
 resourcetype: Document
 title: Problem Set 5
 uid: 2a99a053-87ec-35e9-ea43-47054afa9ece
