--- a/content/resources/mit6_050js08_ps_06.md
+++ b/content/resources/mit6_050js08_ps_06.md
@@ -7,6 +7,7 @@ learning_resource_types: []
 ocw_type: OCWFile
 parent_title: 'Unit 7: Processes'
 parent_type: CourseSection
+parent_uid: 9453fa10-297c-8f65-ea5d-3c62461edc54
 resourcetype: Document
 title: Problem Set 6
 uid: a2c65198-b54e-56a1-eea2-85a5e8d45f4c
