--- a/content/resources/mit6_050js08_ps_07.md
+++ b/content/resources/mit6_050js08_ps_07.md
@@ -7,6 +7,7 @@ learning_resource_types: []
 ocw_type: OCWFile
 parent_title: 'Unit 8: Inference'
 parent_type: CourseSection
+parent_uid: c334d67c-3d5f-a06a-3bd8-fc9d31760f32
 resourcetype: Document
 title: Problem Set 7
 uid: fe16b4b3-e667-f0d2-d634-d47af2169354
