--- a/content/resources/mit6_050js08_ps_08.md
+++ b/content/resources/mit6_050js08_ps_08.md
@@ -7,6 +7,7 @@ learning_resource_types: []
 ocw_type: OCWFile
 parent_title: 'Unit 9: Maximum Entropy'
 parent_type: CourseSection
+parent_uid: b12913cf-0777-b412-6ec0-4bb3ff6fdcae
 resourcetype: Document
 title: Problem Set 8
 uid: 6f88ccb6-ef92-e1e1-253c-bd0f8151e579
