--- a/content/resources/mit6_050js08_ps_09.md
+++ b/content/resources/mit6_050js08_ps_09.md
@@ -7,6 +7,7 @@ learning_resource_types: []
 ocw_type: OCWFile
 parent_title: 'Unit 10: Physical Systems'
 parent_type: CourseSection
+parent_uid: 04d3de47-9068-805c-423b-0e0a1cb71ed7
 resourcetype: Document
 title: Problem Set 9
 uid: 07daed4e-50b7-32eb-0b3d-46cad77543b3
