--- a/content/resources/mit6_050js08_ps_01.md
+++ b/content/resources/mit6_050js08_ps_01.md
@@ -7,6 +7,7 @@ learning_resource_types: []
 ocw_type: OCWFile
 parent_title: 'Units 1 & 2: Bits and Codes'
 parent_type: CourseSection
+parent_uid: 4da88728-f4c9-8662-0aaa-7541b3fb2136
 resourcetype: Document
 title: Problem Set 1
 uid: ae6484ad-c68c-f892-ae7b-9f8e0e6e4553
