--- a/content/resources/mit6_050js08_ps_10.md
+++ b/content/resources/mit6_050js08_ps_10.md
@@ -7,6 +7,7 @@ learning_resource_types: []
 ocw_type: OCWFile
 parent_title: 'Unit 11: Energy'
 parent_type: CourseSection
+parent_uid: 8ed65f6a-4dae-d471-8418-58d21c5e92dc
 resourcetype: Document
 title: Problem Set 10
 uid: ab8f6f9d-4007-5fbf-862e-863d5582807b
