--- a/content/resources/mit6_050js08_ps_11.md
+++ b/content/resources/mit6_050js08_ps_11.md
@@ -7,6 +7,7 @@ learning_resource_types: []
 ocw_type: OCWFile
 parent_title: 'Unit 12: Temperature'
 parent_type: CourseSection
+parent_uid: 5ef930f5-8e59-5217-7087-d1304a2f4b4e
 resourcetype: Document
 title: Problem Set 11
 uid: e90d719d-97a4-b219-aa3b-06395c53e467
