--- a/content/resources/6-050js08-th.md
+++ b/content/resources/6-050js08-th.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Cropped illustration of the Morse telegraph. (Image courtesy of the U.S.
   National Library of Medicine.)
-file: /media/courses/6-050j-information-and-entropy-spring-2008/3123d36e8e3b91f132be7223fa2cc597_6-050js08-th.jpg
+file: /courses/6-050j-information-and-entropy-spring-2008/3123d36e8e3b91f132be7223fa2cc597_6-050js08-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: The Morse telegraph. (Image courtesy of the [U.S. National Library of Medicine](http://www.nlm.nih.gov/nlmhome.html).)
@@ -14,3 +14,5 @@ resourcetype: Image
 title: The Morse Telegraph
 uid: 3123d36e-8e3b-91f1-32be-7223fa2cc597
 ---
+Cropped illustration of the Morse telegraph. (Image courtesy of the U.S. National Library of Medicine.)
+
