--- a/content/resources/6-050js08.md
+++ b/content/resources/6-050js08.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: The Morse telegraph. (Image courtesy of the U.S. National Library of
   Medicine.)
-file: /media/courses/6-050j-information-and-entropy-spring-2008/998d75aec452abbc037264c8d220786f_6-050js08.jpg
+file: /courses/6-050j-information-and-entropy-spring-2008/998d75aec452abbc037264c8d220786f_6-050js08.jpg
 file_type: image/jpeg
 image_metadata:
   caption: The Morse telegraph. (Image courtesy of the [U.S. National Library of Medicine](http://www.nlm.nih.gov/nlmhome.html).)
@@ -14,3 +14,5 @@ resourcetype: Image
 title: The Morse Telegraph
 uid: 998d75ae-c452-abbc-0372-64c8d220786f
 ---
+The Morse telegraph. (Image courtesy of the U.S. National Library of Medicine.)
+
