--- a/content/resources/mit6_050js08_ps_03.md
+++ b/content/resources/mit6_050js08_ps_03.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: A problem set on information and entropy.
-file: /media/courses/6-050j-information-and-entropy-spring-2008/417902c7efc1b75107c58381af7ea9b3_MIT6_050JS08_ps_03.pdf
+file: /courses/6-050j-information-and-entropy-spring-2008/417902c7efc1b75107c58381af7ea9b3_MIT6_050JS08_ps_03.pdf
 file_type: application/pdf
 learning_resource_types: []
 ocw_type: OCWFile
@@ -12,3 +12,5 @@ resourcetype: Document
 title: Problem Set 3
 uid: 417902c7-efc1-b751-07c5-8381af7ea9b3
 ---
+A problem set on information and entropy.
+
