--- a/content/resources/mit6_050js08_ps_05.md
+++ b/content/resources/mit6_050js08_ps_05.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: A problem set on information and entropy.
-file: /media/courses/6-050j-information-and-entropy-spring-2008/2a99a05387ec35e9ea4347054afa9ece_MIT6_050JS08_ps_05.pdf
+file: /courses/6-050j-information-and-entropy-spring-2008/2a99a05387ec35e9ea4347054afa9ece_MIT6_050JS08_ps_05.pdf
 file_type: application/pdf
 learning_resource_types: []
 ocw_type: OCWFile
@@ -12,3 +12,5 @@ resourcetype: Document
 title: Problem Set 5
 uid: 2a99a053-87ec-35e9-ea43-47054afa9ece
 ---
+A problem set on information and entropy.
+
