--- a/content/resources/mit6_050js08_ps_06.md
+++ b/content/resources/mit6_050js08_ps_06.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: A problem set on information and entropy.
-file: /media/courses/6-050j-information-and-entropy-spring-2008/a2c65198b54e56a1eea285a5e8d45f4c_MIT6_050JS08_ps_06.pdf
+file: /courses/6-050j-information-and-entropy-spring-2008/a2c65198b54e56a1eea285a5e8d45f4c_MIT6_050JS08_ps_06.pdf
 file_type: application/pdf
 learning_resource_types: []
 ocw_type: OCWFile
@@ -12,3 +12,5 @@ resourcetype: Document
 title: Problem Set 6
 uid: a2c65198-b54e-56a1-eea2-85a5e8d45f4c
 ---
+A problem set on information and entropy.
+
