--- a/content/resources/mit6_050js08_ps_08.md
+++ b/content/resources/mit6_050js08_ps_08.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: A problem set on information and entropy.
-file: /media/courses/6-050j-information-and-entropy-spring-2008/6f88ccb6ef92e1e1253cbd0f8151e579_MIT6_050JS08_ps_08.pdf
+file: /courses/6-050j-information-and-entropy-spring-2008/6f88ccb6ef92e1e1253cbd0f8151e579_MIT6_050JS08_ps_08.pdf
 file_type: application/pdf
 learning_resource_types: []
 ocw_type: OCWFile
@@ -12,3 +12,5 @@ resourcetype: Document
 title: Problem Set 8
 uid: 6f88ccb6-ef92-e1e1-253c-bd0f8151e579
 ---
+A problem set on information and entropy.
+
