--- a/content/resources/mit6_050js08_ps_09.md
+++ b/content/resources/mit6_050js08_ps_09.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: A problem set on information and entropy.
-file: /media/courses/6-050j-information-and-entropy-spring-2008/07daed4e50b732eb0b3d46cad77543b3_MIT6_050JS08_ps_09.pdf
+file: /courses/6-050j-information-and-entropy-spring-2008/07daed4e50b732eb0b3d46cad77543b3_MIT6_050JS08_ps_09.pdf
 file_type: application/pdf
 learning_resource_types: []
 ocw_type: OCWFile
@@ -12,3 +12,5 @@ resourcetype: Document
 title: Problem Set 9
 uid: 07daed4e-50b7-32eb-0b3d-46cad77543b3
 ---
+A problem set on information and entropy.
+
