--- a/content/resources/mit6_050js08_ps_11.md
+++ b/content/resources/mit6_050js08_ps_11.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: A problem set on information and entropy.
-file: /media/courses/6-050j-information-and-entropy-spring-2008/e90d719d97a4b219aa3b06395c53e467_MIT6_050JS08_ps_11.pdf
+file: /courses/6-050j-information-and-entropy-spring-2008/e90d719d97a4b219aa3b06395c53e467_MIT6_050JS08_ps_11.pdf
 file_type: application/pdf
 learning_resource_types: []
 ocw_type: OCWFile
@@ -12,3 +12,5 @@ resourcetype: Document
 title: Problem Set 11
 uid: e90d719d-97a4-b219-aa3b-06395c53e467
 ---
+A problem set on information and entropy.
+
