Sync all content

--- a/content/resources/6-050js08-th.md
+++ b/content/resources/6-050js08-th.md
@@ -9,10 +9,10 @@ image_metadata:
   credit: ''
   image-alt: Historical schematic diagram of Morse telegraph.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: The Morse Telegraph
 uid: 3123d36e-8e3b-91f1-32be-7223fa2cc597
 ---
 Cropped illustration of the Morse telegraph. (Image courtesy of the U.S. National Library of Medicine.)
-
