--- a/content/resources/6-050js08.md
+++ b/content/resources/6-050js08.md
@@ -9,10 +9,10 @@ image_metadata:
   credit: ''
   image-alt: Historical schematic diagram of Morse telegraph.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: The Morse Telegraph
 uid: 998d75ae-c452-abbc-0372-64c8d220786f
 ---
 The Morse telegraph. (Image courtesy of the U.S. National Library of Medicine.)
-
