--- a/content/resources/mit6_050js08_ps_01.md
+++ b/content/resources/mit6_050js08_ps_01.md
@@ -4,6 +4,7 @@ description: ''
 file: /courses/6-050j-information-and-entropy-spring-2008/ae6484adc68cf892ae7b9f8e0e6e4553_MIT6_050JS08_ps_01.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: 'Units 1 & 2: Bits and Codes'
 parent_type: CourseSection
