--- a/content/resources/mit6_050js08_ps_02.md
+++ b/content/resources/mit6_050js08_ps_02.md
@@ -4,6 +4,7 @@ description: ''
 file: /courses/6-050j-information-and-entropy-spring-2008/75e936d9bacb0fb5b97a9355dcaca045_MIT6_050JS08_ps_02.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: 'Unit 3: Compression'
 parent_type: CourseSection
