--- a/content/resources/mit6_050js08_ps_03.md
+++ b/content/resources/mit6_050js08_ps_03.md
@@ -4,6 +4,7 @@ description: A problem set on information and entropy.
 file: /courses/6-050j-information-and-entropy-spring-2008/417902c7efc1b75107c58381af7ea9b3_MIT6_050JS08_ps_03.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: 'Unit 4: Noise and Errors'
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: Problem Set 3
 uid: 417902c7-efc1-b751-07c5-8381af7ea9b3
 ---
 A problem set on information and entropy.
-
