--- a/content/resources/mit6_050js08_ps_04.md
+++ b/content/resources/mit6_050js08_ps_04.md
@@ -4,6 +4,7 @@ description: A problem set on information and entropy.
 file: /courses/6-050j-information-and-entropy-spring-2008/2f6e880c24f1b40e3a14cdb2f845dd9b_MIT6_050JS08_ps_04.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: 'Unit 5: Probability'
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: Problem Set 4
 uid: 2f6e880c-24f1-b40e-3a14-cdb2f845dd9b
 ---
 A problem set on information and entropy.
-
