--- a/content/resources/mit6_050js08_ps_06.md
+++ b/content/resources/mit6_050js08_ps_06.md
@@ -4,6 +4,7 @@ description: A problem set on information and entropy.
 file: /courses/6-050j-information-and-entropy-spring-2008/a2c65198b54e56a1eea285a5e8d45f4c_MIT6_050JS08_ps_06.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: 'Unit 7: Processes'
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: Problem Set 6
 uid: a2c65198-b54e-56a1-eea2-85a5e8d45f4c
 ---
 A problem set on information and entropy.
-
