--- a/content/resources/mit6_050js08_ps_07.md
+++ b/content/resources/mit6_050js08_ps_07.md
@@ -4,6 +4,7 @@ description: A problem set on information and entropy.
 file: /courses/6-050j-information-and-entropy-spring-2008/fe16b4b3e667f0d2d634d47af2169354_MIT6_050JS08_ps_07.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: 'Unit 8: Inference'
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: Problem Set 7
 uid: fe16b4b3-e667-f0d2-d634-d47af2169354
 ---
 A problem set on information and entropy.
-
