--- a/content/resources/mit6_050js08_ps_08.md
+++ b/content/resources/mit6_050js08_ps_08.md
@@ -4,6 +4,7 @@ description: A problem set on information and entropy.
 file: /courses/6-050j-information-and-entropy-spring-2008/6f88ccb6ef92e1e1253cbd0f8151e579_MIT6_050JS08_ps_08.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: 'Unit 9: Maximum Entropy'
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: Problem Set 8
 uid: 6f88ccb6-ef92-e1e1-253c-bd0f8151e579
 ---
 A problem set on information and entropy.
-
