--- a/content/resources/mit6_050js08_ps_10.md
+++ b/content/resources/mit6_050js08_ps_10.md
@@ -4,6 +4,7 @@ description: A problem set on information and entropy.
 file: /courses/6-050j-information-and-entropy-spring-2008/ab8f6f9d40075fbf862e863d5582807b_MIT6_050JS08_ps_10.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: 'Unit 11: Energy'
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: Problem Set 10
 uid: ab8f6f9d-4007-5fbf-862e-863d5582807b
 ---
 A problem set on information and entropy.
-
