--- a/content/resources/mit6_050js08_ps_01.md
+++ b/content/resources/mit6_050js08_ps_01.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/6-050j-information-and-entropy-spring-2008/ae6484adc68cf892ae7b9f8e0e6e4553_MIT6_050JS08_ps_01.pdf
+file_size: 131874
 file_type: application/pdf
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
