--- a/content/resources/mit6_050js08_ps_02.md
+++ b/content/resources/mit6_050js08_ps_02.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/6-050j-information-and-entropy-spring-2008/75e936d9bacb0fb5b97a9355dcaca045_MIT6_050JS08_ps_02.pdf
+file_size: 146766
 file_type: application/pdf
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
