--- a/content/resources/mit6_050js08_ps_06.md
+++ b/content/resources/mit6_050js08_ps_06.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: A problem set on information and entropy.
 file: /courses/6-050j-information-and-entropy-spring-2008/a2c65198b54e56a1eea285a5e8d45f4c_MIT6_050JS08_ps_06.pdf
+file_size: 143040
 file_type: application/pdf
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
