--- a/content/resources/mit6_050js08_ps_08.md
+++ b/content/resources/mit6_050js08_ps_08.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: A problem set on information and entropy.
 file: /courses/6-050j-information-and-entropy-spring-2008/6f88ccb6ef92e1e1253cbd0f8151e579_MIT6_050JS08_ps_08.pdf
+file_size: 173680
 file_type: application/pdf
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
