--- a/content/resources/mit6_050js08_ps_09.md
+++ b/content/resources/mit6_050js08_ps_09.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: A problem set on information and entropy.
 file: /courses/6-050j-information-and-entropy-spring-2008/07daed4e50b732eb0b3d46cad77543b3_MIT6_050JS08_ps_09.pdf
+file_size: 146527
 file_type: application/pdf
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
