--- a/content/resources/mit6_050js08_ps_11.md
+++ b/content/resources/mit6_050js08_ps_11.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: A problem set on information and entropy.
 file: /courses/6-050j-information-and-entropy-spring-2008/e90d719d97a4b219aa3b06395c53e467_MIT6_050JS08_ps_11.pdf
+file_size: 171671
 file_type: application/pdf
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
